--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -1249,6 +1249,12 @@ a.im_panel_peer_photo .peer_initials {
       padding-right: 25px;
     }
 
+    &_progress_icon_wrap {
+      top: 0;
+      right: 0;
+      margin-top: 0;
+    }
+
     &_emoji_insert_btn {
       top: 0;
       right: 0px;
